--- a/index_list/member.html
+++ b/index_list/member.html
@@ -82,7 +82,7 @@
         <div class="container-fluid member_div">
             <div class="row">
                 <div class="col-md-12">
-                    <form class="member_edit_info">
+                    <form>
                         <div>
                             <p class="title_member_edit">會員資料</p>
                         </div>
@@ -100,7 +100,7 @@
                             <input type="text" class="form-control" id="name" value="李曉明" name="name" disabled>
                         </div>
                         <div class="form-group form-inline form_radio">
-                            <label class="form_label">性　別:</label>
+                            <label class="member_form_label">性　別:</label>
                             <label class="form-check-label">
                                 <input type="radio" class="form-check-input" name="optradio" checked="checked"
                                     disabled>男
