--- a/index_list/booking_finish_page.html
+++ b/index_list/booking_finish_page.html
@@ -11,9 +11,9 @@
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainStyle -->
-    <link rel="stylesheet" href="restaurant_style.css">
+    <link rel="stylesheet" href="css/restaurant_style.css">
     <!-- RWD -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
