--- a/index_list/restaurant_page.html
+++ b/index_list/restaurant_page.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
+    <!-- breadcrumb -->
+    <link rel="stylesheet" href="./css/breadcrumb.css">
     <!-- mainStyle -->
-    <link rel="stylesheet" href="restaurant_style.css">
+    <link rel="stylesheet" href="./css/restaurant_page.css">
     <!-- RWD -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
