--- a/index_list/editmember.html
+++ b/index_list/editmember.html
@@ -79,7 +79,7 @@
     </div>
 
     <section id="edit_member">
-        <div class="container-fluid member_div">
+        <div class="container-fluid default_container member_div">
             <div class="row">
                 <div class="col-md-12">
                     <form>
