--- a/index_list/booking_manage.html
+++ b/index_list/booking_manage.html
@@ -79,7 +79,7 @@
     </div>
 
     <div id="booking_manage">
-        <div class="container-fluid">
+        <div class="container-fluid table_container">
             <div class="row">
                 <div class="col-md-12">
                     <table class="table">
