--- a/index_list/login.html
+++ b/index_list/login.html
@@ -29,7 +29,7 @@
     <!-- 導覽列 end -->
 
     <section>
-        <div class="container-fluid login_div">
+        <div class="container-fluid default_container login_div">
             <div class="row">
                 <div class="col-12">
                     <form action="">
