--- a/index_list/restaurant_ today_booking.html
+++ b/index_list/restaurant_ today_booking.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>restaurant_self_pick_up</title>
+  <title>restaurant_today_booking</title>
 
   <!-- bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
