--- a/index_list/restaurant_self_pick_up.html
+++ b/index_list/restaurant_self_pick_up.html
@@ -39,12 +39,12 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">今日訂位</a>
+            <a data-parent="#accordion" href="./restaurant_today_booking.html">今日訂位</a>
           </div>
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">歷史訂位紀錄</a>
+            <a data-parent="#accordion" href="./restaurant_history_list.html">歷史訂位紀錄</a>
           </div>
         </div>
       </div>
@@ -55,12 +55,12 @@
         </div>
         <div id="collapseTwo" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">今日自取訂餐</a>
+            <a data-parent="#accordion" href="./restaurant_today_booking.html">今日自取訂餐</a>
           </div>
         </div>
         <div id="collapseTwo" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="#collapseOne">歷史訂餐紀錄</a>
+            <a data-parent="#accordion" href="./restaurant_booking_history.html">歷史訂餐紀錄</a>
           </div>
         </div>
       </div>
