--- a/index_list/restaurant_self_pick_up.html
+++ b/index_list/restaurant_self_pick_up.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>restaurant_self_pick_up</title>
+  <title>今日自取訂餐</title>
 
 
   <!-- bootstrap -->
@@ -44,7 +44,7 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="./restaurant_history_list.html">歷史訂位紀錄</a>
+            <a data-parent="#accordion" href="./restaurant_booking_history.html">歷史訂位紀錄</a>
           </div>
         </div>
       </div>
@@ -60,7 +60,7 @@
         </div>
         <div id="collapseTwo" class="panel-collapse collapse in">
           <div class="little_title">
-            <a data-parent="#accordion" href="./restaurant_booking_history.html">歷史訂餐紀錄</a>
+            <a data-parent="#accordion" href="./restaurant_history_list.html">歷史訂餐紀錄</a>
           </div>
         </div>
       </div>
