--- a/index_list/restaurant_today_booking.html
+++ b/index_list/restaurant_today_booking.html
@@ -118,7 +118,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;">
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
               </label>
             </div>
           </td>
@@ -129,14 +129,13 @@
           <td>李曉明</td>
           <td>09001993412</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 80px">
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
             <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -35px; border: 1px solid #403C3C;">
+              style="margin-right: 50px; border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -146,7 +145,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;">
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;">
               </label>
             </div>
           </td>
@@ -157,14 +156,13 @@
           <td>李曉明</td>
           <td>09001993412</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 80px">
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
             <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -35px; border: 1px solid #403C3C;">
+              style="margin-right: 50px ;border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -174,7 +172,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;" checked>
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
               </label>
             </div>
           </td>
@@ -185,14 +183,13 @@
           <td>李曉明</td>
           <td>09001993412</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 80px;">
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn cancel" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -35px; border: 1px solid #403C3C;">
+            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
+              style="margin-right: 50px; border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -202,7 +199,7 @@
           <td>
             <div class="checkbox">
               <label>
-                <input type="checkbox" style="width: 20px; height: 20px; margin-left: 15px;" checked>
+                <input type="checkbox" style="width: 15px; height: 15px; margin-left: 15px;" checked>
               </label>
             </div>
           </td>
@@ -213,14 +210,13 @@
           <td>李曉明</td>
           <td>09001993412</td>
           <td>
-            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: 80px;">
+            <button class="btn btn-sm btn-dark detail_btn" data-toggle="modal" data-target="#detailModal">
               詳細內容
             </button>
           </td>
           <td>
             <button class="btn btn-sm detail_btn cancel" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -35px; border: 1px solid #403C3C;">
+              style="margin-right: 50px; border: 1px solid #403C3C;">
               取消
             </button>
           </td>
