--- a/index_list/list.html
+++ b/index_list/list.html
@@ -134,7 +134,6 @@
                                         關閉
                                     </div>
                                 </div>
-
                             </div>
 
                             <div class="dropdown">
@@ -283,7 +282,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -294,7 +296,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -305,7 +310,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -316,7 +324,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -327,7 +338,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -338,7 +352,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -349,7 +366,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                         <div class="rest_list">
@@ -360,7 +380,10 @@
                                 <h4>餐廳類別</h4>
                                 <h3>餐廳名稱</h3>
                                 <h4>餐廳地址</h4>
-                                <h>評分</h>
+                                <div class="rest_inline_div">
+                                    <span>評分</span>
+                                    <a href="#">菜單</a>
+                                </div>
                             </div>
                         </div>
                     </div>
