--- a/index_list/member_login.html
+++ b/index_list/member_login.html
@@ -12,9 +12,9 @@
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainStyle -->
-    <link rel="stylesheet" href="./css/member_login.css">
+    <link rel="stylesheet" href="css/member_login.css">
     <!-- RWD -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 
     <script src="js/jquery.min.js"></script>
