--- a/index_list/member_login_success.html
+++ b/index_list/member_login_success.html
@@ -13,7 +13,7 @@
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainStyle -->
-    <link rel="stylesheet" href="css/member_login.css">
+    <link rel="stylesheet" href="css/login.css">
     <!-- RWD -->
     <link rel="stylesheet" href="css/style.css">
     
@@ -31,8 +31,8 @@
 
     <!-- header over -->
 
-    <section>
-        <div class="container-fluid">
+    <section id="success_section">
+        <div class="container-fluid success_div">
             <div class="row">
                 <div class="col-12">
                     <div class="member_success">
