--- a/index_list/member_register.html
+++ b/index_list/member_register.html
@@ -37,47 +37,40 @@
                             <span class="register_title_text"><i class="fas fa-user-circle"></i>會員註冊</span>
                         </div>
                         <div class="form-group row">
-                            <label for="name" class="form_text">姓名
-                            </label>
+                            <label for="name" class="form_text">姓名</label>
                             <div class="input_box">
                                 <input type="text" id="name" class="form-control">
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="email" class="form_text">信箱
-                            </label>
+                            <label for="email" class="form_text">信箱</label>
                             <div class="input_box">
                                 <input type="text" id="email" class="form-control" name="email">
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label for="password" class="form_text">密碼
-                            </label>
+                            <label for="password" class="form_text">密碼</label>
                             <div class="input_box">
                                 <input type="text" id="password" class="form-control" name="password">
                             </div>
                         </div>
 
                         <div class="form-group row password_confirm">
-                            <label for="password_confirm" class="form_text">確認密碼
-                            </label>
+                            <label for="password_confirm" class="form_text">確認密碼</label>
                             <div class="input_box">
                                 <input type="text" id="password_confirm" class="form-control" name="password_confirm">
                             </div>
                         </div>
 
                         <div class="form-group row">
-                            <label for="phone_number" class="form_text">手機
-                            </label>
+                            <label for="phone_number" class="form_text">手機</label>
                             <div class="input_box">
                                 <input type="text" id="phone_number" class="form-control">
                             </div>
                         </div>
                         <div class="btn_div">
-                            <button class="register_btn">
-                                註冊
-                            </button>
+                            <button class="register_btn">註冊</button>
                         </div>
                     </form>
                 </div>
