--- a/index_list/restaurant_today_booking.html
+++ b/index_list/restaurant_today_booking.html
@@ -134,8 +134,8 @@
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-right: 50px; border: 1px solid #403C3C;">
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal"
+              style="border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -161,8 +161,8 @@
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-right: 50px ;border: 1px solid #403C3C;">
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal"
+              style="border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -188,8 +188,8 @@
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-right: 50px; border: 1px solid #403C3C;">
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal"
+              style="border: 1px solid #403C3C;">
               取消
             </button>
           </td>
@@ -215,8 +215,8 @@
             </button>
           </td>
           <td>
-            <button class="btn btn-sm detail_btn cancel" data-toggle="modal" data-target="#detailModal"
-              style="margin-right: 50px; border: 1px solid #403C3C;">
+            <button class="btn btn-sm detail_btn cancel_btn" data-toggle="modal" data-target="#detailModal"
+              style="border: 1px solid #403C3C;">
               取消
             </button>
           </td>
