--- a/index_list/orderpage_order_group_on.html
+++ b/index_list/orderpage_order_group_on.html
@@ -10,7 +10,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- fontawesome -->
-    <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainstyle -->
     <link rel="stylesheet" href="css/style.css">
     <!-- order page -->
