--- a/index_list/restaurant_page.html
+++ b/index_list/restaurant_page.html
@@ -11,11 +11,11 @@
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- breadcrumb -->
-    <link rel="stylesheet" href="./css/breadcrumb.css">
+    <link rel="stylesheet" href="css/breadcrumb.css">
     <!-- mainStyle -->
-    <link rel="stylesheet" href="./css/restaurant_page.css">
+    <link rel="stylesheet" href="css/restaurant_page.css">
     <!-- RWD -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -39,8 +39,8 @@
             <!-- 導覽列 start -->
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#index"><span>首頁</span></a></li>
-                    <li class="breadcrumb-item"><a href="#restaurantList"><span>餐廳列表</span></a></li>
+                    <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
+                    <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><span>餐廳名稱</span></li>
                 </ul>
             </nav>
