--- a/index_list/booking_finish_page.html
+++ b/index_list/booking_finish_page.html
@@ -39,8 +39,8 @@
             <!-- 導覽列 start -->
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#index"><span>首頁</span></a></li>
-                    <li class="breadcrumb-item"><a href="#restaurantList"><span>餐廳列表</span></a></li>
+                    <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
+                    <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
                     <li class="breadcrumb-item"><a href="#restaurantName"><span>餐廳名稱</span></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><span>訂位</span></li>
                 </ul>
