--- a/index_list/booking_reservation_page.html
+++ b/index_list/booking_reservation_page.html
@@ -12,11 +12,11 @@
     <!-- fontAwesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- breadcrumb -->
-    <link rel="stylesheet" href="./css/breadcrumb.css">
+    <link rel="stylesheet" href="css/breadcrumb.css">
     <!-- progress -->
-    <link rel="stylesheet" href="./css/progress.css">
+    <link rel="stylesheet" href="css/progress.css">
     <!-- mainStyle -->
-    <link rel="stylesheet" href="./css/booking_reservation_page.css">
+    <link rel="stylesheet" href="css/booking_reservation_page.css">
     <!-- RWD -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -41,8 +41,8 @@
             <!-- 導覽列 start -->
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#index"><span>首頁</span></a></li>
-                    <li class="breadcrumb-item"><a href="#restaurantList"><span>餐廳列表</span></a></li>
+                    <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
+                    <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
                     <li class="breadcrumb-item"><a href="#restaurantName"><span>餐廳名稱</span></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><span>訂位</span></li>
                 </ul>
