--- a/index_list/shoppingchar.html
+++ b/index_list/shoppingchar.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- RWD -->
     <link rel="stylesheet" href="css/shoppingchar.css">
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -30,15 +31,15 @@
 
         <nav aria-label="breadcrumb">
             <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#index"><span>首頁</span></a></li>
-                <li class="breadcrumb-item"><a href="#restaurantList"><span>餐廳列表</span></a></li>
+                <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
+                <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
                 <li class="breadcrumb-item active" aria-current="page"><span>訂餐</span></a></li>
             </ul>
         </nav>
         <div class="shopping">
             <table class="table shopping-table">
                 <thead>
-                    <tr class="">
+                    <tr>
                         <th colspan="3">
                             商品
                         </th>
@@ -57,8 +58,8 @@
                     </tr>
                 </thead>
 
-                <tbody class="">
-                    <tr style=" background-color:#403c3c;">
+                <tbody>
+                    <tr class="tr_title" style=" background-color:#403c3c;">
                         <td colspan="7">
                             <div style="color: white; font-size:larger;">餐廳名稱</div>
                         </td>
