booking_reservation_page RWD renew

--- a/index_list/booking_reservation_page.html
+++ b/index_list/booking_reservation_page.html
@@ -41,8 +41,8 @@
             <!-- 導覽列 start -->
             <nav aria-label="breadcrumb">
                 <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
-                    <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
+                    <li class="breadcrumb-item"><a href="#index"><span>首頁</span></a></li>
+                    <li class="breadcrumb-item"><a href="#restaurantList"><span>餐廳列表</span></a></li>
                     <li class="breadcrumb-item"><a href="#restaurantName"><span>餐廳名稱</span></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><span>訂位</span></li>
                 </ul>
@@ -119,8 +119,8 @@
                                 <input type="email" id="reservation_person_email" name="reservation_person_email"
                                        placeholder="your_email@gmail.com" required />
                             </div>
+                            <button type="submit" class="reservation_btn_next">下一步：訂位確認</button>
                         </form>
-                        <input type="submit" class="reservation_btn_next" value="下一步：訂位確認" />
                     </div>
                 </div>
             </div>
