--- a/index_list/shoppingok.html
+++ b/index_list/shoppingok.html
@@ -8,7 +8,6 @@
     <title>shoppingok</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min_edit.css">
     <!-- fontawesome -->
     <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
     <!-- mainstyle -->
@@ -29,127 +28,133 @@
     <div class="header_page"></div>
     <!-- header -->
 
-    <div class="container main">
-        <nav aria-label="breadcrumb">
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
-                <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
-                <li class="breadcrumb-item active" aria-current="page"><span>訂餐</span></a></li>
-            </ul>
-        </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav aria-label="breadcrumb">
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
+                        <li class="breadcrumb-item"><a href="list.html"><span>餐廳列表</span></a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><span>訂餐</span></a></li>
+                    </ul>
+                </nav>
 
-        <div class="shopping ">
-            <table class="table shopping-table">
-                <thead>
-                    <tr>
-                        <th colspan="2">
-                            商品
-                        </th>
-                        <th>
-                            單價
-                        </th>
-                        <th>
-                            數量
-                        </th>
-                        <th>
-                            總計
-                        </th>
+                <div id="shopping">
+                    <table class="table shopping-table">
+                        <thead>
+                            <tr>
+                                <th colspan="2">
+                                    商品
+                                </th>
+                                <th>
+                                    單價
+                                </th>
+                                <th>
+                                    數量
+                                </th>
+                                <th>
+                                    總計
+                                </th>
+                            </tr>
+                        </thead>
 
-                    </tr>
-                </thead>
+                        <tbody>
+                            <!-- 餐點顯示欄位 -->
+                            <tr class="shopping-row" id="shopping-row">
+                                <td class="wrapper" id="td-1" style="width: 200px;">
+                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                        alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">
+                                        餐點名
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $123
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        1
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $1234
+                                    </span>
+                                </td>
+                            </tr>
+                            <!-- end of 餐點顯示欄位 -->
+                            <tr class="shopping-row" id="shopping-row">
+                                <td class="wrapper">
+                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
+                                        alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">
+                                        餐點名
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $123
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        1
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        $1234
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr class="shopping-row" style="height: 140px;">
+                                <td colspan="3" style="text-align: center; vertical-align: middle;">
+                                    <label for="get_time">取餐時間:
+                                        <input type="datetime-local">
+                                    </label>
+                                </td>
+                                <td colspan="2" style="text-align: center; vertical-align: middle;">
+                                    <label for="order-tex">備註:
+                                        <input type="text" id="order-text">
+                                    </label>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div style="height: 100px;"></div>
 
-                <tbody>
-                    <!-- 餐點顯示欄位 -->
-                    <tr class="shopping-row" id="shopping-row">
-                        <td class="wrapper" id="td-1" style="width: 200px;">
-                            <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
-                        </td>
-                        <td>
-                            <span id="ordername" class="ordername">
-                                餐點名
-                            </span>
-                        </td>
-                        <td>
-                            <span>
-                                $123
-                            </span>
-                        </td>
-                        <td>
-                            <span>
-                                1
-                            </span>
-                        </td>
-                        <td>
-                            <span>
-                                $1234
-                            </span>
-                        </td>
-                    </tr>
-                    <!-- end of 餐點顯示欄位 -->
-                    <tr class="shopping-row" id="shopping-row">
-                        <td class="wrapper">
-                            <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
-                        </td>
-                        <td>
-                            <span id="ordername" class="ordername">
-                                餐點名
-                            </span>
-                        </td>
-                        <td>
-                            <span>
-                                $123
-                            </span>
-                        </td>
-                        <td>
-                            <span>
-                                1
-                            </span>
-                        </td>
-                        <td>
-                            <span>
-                                $1234
-                            </span>
-                        </td>
-                    </tr>
-                    <tr class="shopping-row" style="height: 140px;">
-                        <td colspan="3" style="text-align: center; vertical-align: middle;">
-                            <label for="get_time">取餐時間:
-                                <input type="datetime-local">
-                            </label>
-                        </td>
-                        <td colspan="2" style="text-align: center; vertical-align: middle;">
-                            <label for="order-tex">備註:
-                                <input type="text" id="order-text">
-                            </label>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                <div class="all-squre" id="all-squre">
+                    <table class="table">
+                        <tbody>
+                            <tr id="sum-row">
+                                <td colspan="1">
+                                    <button id="buy-back-btn">回上一步</button>
+                                </td>
+                                <td>
+                                    <b>總金額(3個商品)$1234</b>
+                                </td>
+                                <td>
+                                    <button id="buy-ok-btn">下訂單</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-        <div style="height: 100px;"></div>
 
-        <div class="all-squre" id="all-squre">
-            <table class="table">
-                <tbody>
-                    <tr id="sum-row">
-                        <td colspan="1">
-                            <button id="buy-back-btn">回上一步</button>
-                        </td>
-                        <td>
-                            <b>總金額(3個商品)$1234</b>
-                        </td>
-                        <td>
-                            <button id="buy-ok-btn">下訂單</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
     </div>
 
     <!-- footer -->
     <footer>
-        <footer class="footer_page"></footer>
+        <div class="footer_page"></div>
     </footer>
     <!-- footer -->
 
