--- a/index_list/orderpage.html
+++ b/index_list/orderpage.html
@@ -30,34 +30,43 @@
 
     <div class="menu_group ">
         <div id="menu_group">
-            <button type="button" class="oval menu_group_list">餐點分類1</button>
-            <button type="button" class="oval menu_group_list">餐點分類2</button>
-            <button type="button" class="oval menu_group_list">餐點分類3</button>
-            <button type="button" class="oval menu_group_list">餐點分類4</button>
-            <button type="button" class="oval menu_group_list">餐點分類5</button>
-            <button type="button" class="oval menu_group_list">餐點分類6</button>
+            <button type="button" class="oval menu_group_list">開胃菜</button>
+            <button type="button" class="oval menu_group_list">沙拉</button>
+            <button type="button" class="oval menu_group_list">湯</button>
+            <button type="button" class="oval menu_group_list">甜點</button>
+            <button type="button" class="oval menu_group_list">義式燉飯</button>
+            <button type="button" class="oval menu_group_list">義大利麵</button>
+            <button type="button" class="oval menu_group_list">主廚排餐</button>
+            <button type="button" class="oval menu_group_list">精選排餐</button>
+
+
         </div>
     </div>
 
     <div id="group_1" class="d-flex flex-column">
         <div class="food_title">
-            <h3>餐點分類1</h3>
+            <h3>開胃菜</h3>
         </div>
         <div id=cate1>
             <div class="food_list_border">
                 <div class="food_list_detail">
-                    <img src="./img/餐點1.jpg" class="food_img">
-                    <p class="food_name">商品名稱</p>
-                    <!-- 金額-->
-                    <div class="d-flex flex-row">
-                        <p class="dollar align-self-center">230元</p>
-                            <!--數量-->
-                            <div class="count">
-                                <button class="btn_count count_decrease">-</button>
-                                <input type="text" id="qty_number" min="1" value="1">
-                                <button class="btn_count">+</button>
-                            </div>                        
+                    <div>
+                        <img src="./img/aqua/aqua_img.jpg" class="food_img">
                     </div>
+                    <div class="food_dollar_qty">
+                        <p class="food_name">西西里海鹽柴魚脆薯</p>
+                        <!-- 金額-->
+                        <div class="d-flex flex-row">
+                            <p class="dollar align-self-center">188元</p>
+                                <!--數量-->
+                                <div class="count">
+                                    <button class="btn_count count_decrease">-</button>
+                                    <input type="text" id="qty_number" min="1" value="1">
+                                    <button class="btn_count">+</button>
+                                </div>                        
+                        </div>
+                    </div>
+                   
                     <!-- 加入購物車 -->
                     <div>
                         <button class="btn_add_cart">加入購物車</button>
@@ -65,11 +74,11 @@
             </div>
             </div>
             <div class="food_list_border food_list_border2">
-                <img src="./img/餐點2.jpg" class="food_img">
-                <p class="food_name">商品名稱</p>
+                <img src="./img/aqua/aqua_img.jpg" class="food_img">
+                <p class="food_name">日本海炸牡蠣</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
-                        <p class="dollar align-self-center">230元</p>
+                        <p class="dollar align-self-center">188元</p>
                             <!--數量-->
                             <div class="count">
                                 <button class="btn_count count_decrease">-</button>
@@ -85,11 +94,11 @@
 
             <div class="food_list_border">
                 <div class="food_list_detail">
-                    <img src="./img/餐點1.jpg" class="food_img">
-                    <p class="food_name">商品名稱</p>
+                    <img src="./img/aqua/aqua_img.jpg" class="food_img">
+                    <p class="food_name">南義炸起司條</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
-                        <p class="dollar align-self-center">230元</p>
+                        <p class="dollar align-self-center">288元</p>
                             <!--數量-->
                             <div class="count">
                                 <button class="btn_count count_decrease">-</button>
@@ -104,11 +113,11 @@
             </div>
             </div>
             <div class="food_list_border food_list_border2">
-                <img src="./img/餐點2.jpg" class="food_img">
-                <p class="food_name">商品名稱</p>
+                <img src="./img/aqua/aqua_img.jpg" class="food_img">
+                <p class="food_name">墨西哥酸辣雞翅</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
-                        <p class="dollar align-self-center">230元</p>
+                        <p class="dollar align-self-center">288元</p>
                             <!--數量-->
                             <div class="count">
                                 <button class="btn_count count_decrease">-</button>
@@ -124,11 +133,11 @@
 
             <div class="food_list_border">
                 <div class="food_list_detail">
-                    <img src="./img/餐點1.jpg" class="food_img">
-                    <p class="food_name">商品名稱</p>
+                    <img src="./img/aqua/aqua_img.jpg" class="food_img">
+                    <p class="food_name">地中海白酒烘煮鮮蛤</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
-                        <p class="dollar align-self-center">230元</p>
+                        <p class="dollar align-self-center">288元</p>
                             <!--數量-->
                             <div class="count">
                                 <button class="btn_count count_decrease">-</button>
@@ -143,7 +152,7 @@
             </div>
             </div>
             <div class="food_list_border food_list_border2">
-                <img src="./img/餐點2.jpg" class="food_img">
+                <img src="./img/aqua/aqua_img.jpg" class="food_img">
                 <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
@@ -173,7 +182,7 @@
         <div id="cate2">
             <div class="food_list_border">
                 <div class="food_list_detail">
-                    <img src="./img/餐點1.jpg" class="food_img">
+                    <img src="./img/aqua/aqua_img.jpg" class="food_img">
                     <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
@@ -193,7 +202,7 @@
             </div>
 
             <div class="food_list_border food_list_border2">
-                <img src="./img/餐點2.jpg" class="food_img">
+                <img src="./img/aqua/aqua_img.jpg" class="food_img">
                 <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
@@ -213,7 +222,7 @@
 
             <div class="food_list_border">
                 <div class="food_list_detail">
-                    <img src="./img/餐點1.jpg" class="food_img">
+                    <img src="./img/aqua/aqua_img.jpg" class="food_img">
                     <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
@@ -233,7 +242,7 @@
             </div>
 
             <div class="food_list_border food_list_border2">
-                <img src="./img/餐點2.jpg" class="food_img">
+                <img src="./img/aqua/aqua_img.jpg" class="food_img">
                 <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
@@ -253,7 +262,7 @@
 
             <div class="food_list_border">
                 <div class="food_list_detail">
-                    <img src="./img/餐點1.jpg" class="food_img">
+                    <img src="./img/aqua/aqua_img.jpg" class="food_img">
                     <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
@@ -273,7 +282,7 @@
             </div>
 
             <div class="food_list_border food_list_border2">
-                <img src="./img/餐點2.jpg" class="food_img">
+                <img src="./img/aqua/aqua_img.jpg" class="food_img">
                 <p class="food_name">商品名稱</p>
                     <!-- 金額-->
                     <div class="d-flex flex-row">
