--- a/index_list/restaurant_booking_history.html
+++ b/index_list/restaurant_booking_history.html
@@ -2,219 +2,211 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>歷史訂位紀錄</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>歷史訂位紀錄</title>
 
-  <!-- bootstrap -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- fontawesome -->
-  <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
-  <!-- mainstyle -->
-  <link rel="stylesheet" href="css/style.css">
-  <!-- index -->
-  <link rel="stylesheet" href="css/restaurant_booking_history.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
+    <!-- mainstyle -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- index -->
+    <link rel="stylesheet" href="css/restaurant_booking_history.css">
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
-      <!-- 導覽列 start -->
+    <!-- 導覽列 start -->
 
-      <div class="header_page"></div>
+    <div class="header_page"></div>
 
-      <!-- 導覽列 over -->
+    <!-- 導覽列 over -->
 
-  <aside>
-    <div class="panel-group" id="accordion">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">預位管理</a>
-          </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="restaurant_today_booking.html">今日訂位</a>
-          </div>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="restaurant_booking_history.html">歷史訂位紀錄</a>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂位管理</a>
-          </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
-          </div>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse in">
-          <div class="little_title">
-            <a data-parent="#accordion" href="restaurant_history_list.html">歷史訂餐紀錄</a>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">搜尋</a>
-          </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse in">
-
-          <form class="sreach_form">
-            <div class="form-group row form_textbox">
-              <label for="booker" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id="booker" name="booker" placeholder="訂位人" type="text" class="form-control">
-              </div>
+    <aside>
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">預位管理</a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in">
+                    <div class="little_title">
+                        <a data-parent="#accordion" href="restaurant_today_booking.html">今日訂位</a>
+                    </div>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in">
+                    <div class="little_title">
+                        <a data-parent="#accordion" href="restaurant_booking_history.html">歷史訂位紀錄</a>
+                    </div>
+                </div>
             </div>
-            <div class="form-group row form_textbox">
-              <label for=" booking_number" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id=" booking_number" name=" booking_number" placeholder="訂位編號" type="text" class="form-control">
-              </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">訂位管理</a>
+                    </h4>
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse in">
+                    <div class="little_title">
+                        <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
+                    </div>
+                </div>
+                <div id="collapseTwo" class="panel-collapse collapse in">
+                    <div class="little_title">
+                        <a data-parent="#accordion" href="restaurant_history_list.html">歷史訂餐紀錄</a>
+                    </div>
+                </div>
             </div>
-            <div class="form-group row form_textbox">
-              <label for=" booking_date" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id=" booking_date" name=" booking_date" placeholder="訂位日期" type="text" class="form-control">
-              </div>
-            </div>
-            <div class="form-group row form_textbox">
-              <label for="booker_phone" class="col-4 col-form-label"></label>
-              <div class="col-10">
-                <input id="booker_phone" name="booker_phone" placeholder="手機" type="text" class="form-control">
-              </div>
-            </div>
-          </form>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">搜尋</a>
+                    </h4>
+                </div>
+                <div id="collapseThree" class="panel-collapse collapse in">
 
+                    <form class="sreach_form">
+                        <div class="form-group row form_textbox">
+                            <label for="booker" class="col-4 col-form-label"></label>
+                            <div class="col-10">
+                                <input id="booker" name="booker" placeholder="訂位人" type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row form_textbox">
+                            <label for=" booking_number" class="col-4 col-form-label"></label>
+                            <div class="col-10">
+                                <input id=" booking_number" name=" booking_number" placeholder="訂位編號" type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row form_textbox">
+                            <label for=" booking_date" class="col-4 col-form-label"></label>
+                            <div class="col-10">
+                                <input id=" booking_date" name=" booking_date" placeholder="訂位日期" type="text" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group row form_textbox">
+                            <label for="booker_phone" class="col-4 col-form-label"></label>
+                            <div class="col-10">
+                                <input id="booker_phone" name="booker_phone" placeholder="手機" type="text" class="form-control">
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </aside>
+    </aside>
 
-  <div class="container">
-    <table class="table order_table">
-      <thead>
-        <tr>
-          <th>狀態</th>
-          <th>訂位編號</th>
-          <th>訂位日期</th>
-          <th>訂位時間</th>
-          <th>訂位人數</th>
-          <th>訂位人</th>
-          <th>手機</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>已帶位</td>
-          <td>00001</td>
-          <td>2022-01-08</td>
-          <td>17:00</td>
-          <td>3</td>
-          <td>李曉明</td>
-          <td>0900123412</td>
-          <td>
-            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -30px">
+    <div class="container">
+        <table class="table order_table">
+            <thead>
+                <tr>
+                    <th>狀態</th>
+                    <th>訂位編號</th>
+                    <th>訂位日期</th>
+                    <th>訂位時間</th>
+                    <th>訂位人數</th>
+                    <th>訂位人</th>
+                    <th>手機</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>已帶位</td>
+                    <td>00001</td>
+                    <td>2022-01-08</td>
+                    <td>17:00</td>
+                    <td>3</td>
+                    <td>李曉明</td>
+                    <td>0900123412</td>
+                    <td>
+                        <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal" style="margin-left: -30px">
               詳細內容
             </button>
-          </td>
-        </tr>
+                    </td>
+                </tr>
 
-        <tr>
-          <td>取消</td>
-          <td>00002</td>
-          <td>2022-01-08</td>
-          <td>18:00</td>
-          <td>4</td>
-          <td>陳曉明</td>
-          <td>0900884512</td>
-          <td>
-            <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal"
-              style="margin-left: -30px">
+                <tr>
+                    <td>取消</td>
+                    <td>00002</td>
+                    <td>2022-01-08</td>
+                    <td>18:00</td>
+                    <td>4</td>
+                    <td>陳曉明</td>
+                    <td>0900884512</td>
+                    <td>
+                        <button class="btn btn-sm detail_btn" data-toggle="modal" data-target="#detailModal" style="margin-left: -30px">
               詳細內容
             </button>
-          </td>
-        </tr>
+                    </td>
+                </tr>
 
-        <!-- 詳細內容對話盒 -->
-        <div class="modal fade" id="detailModal">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <!-- Modal Header -->
-              <div class="modal-header">
-                <h4 class="modal-title">詳細內容</h4>
-                <button type="button" class="close" data-dismiss="modal"></button>
-              </div>
+                <!-- 詳細內容對話盒 -->
+                <div class="modal fade" id="detailModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">詳細內容</h4>
+                                <button type="button" class="close" data-dismiss="modal"></button>
+                            </div>
 
-              <!-- Modal body -->
-              <div class="detail_modal_body">
-                姓名：李曉明 <br />
-                手機：0900-xxxxxx<br />
-                電子郵件：email@gmail.com <br />
-                <br />
-                訂位編號：00001 <br />
-                訂位人數：3人 <br />
-                訂位日期：2022/02/02 <br />
-                取位時間：17:30 <br />
-                備註：需要兒童座椅
-              </div>
+                            <!-- Modal body -->
+                            <div class="detail_modal_body">
+                                姓名：李曉明 <br /> 手機：0900-xxxxxx
+                                <br /> 電子郵件：email@gmail.com <br />
+                                <br /> 訂位編號：00001 <br /> 訂位人數：3人 <br /> 訂位日期：2022/02/02 <br /> 取位時間：17:30 <br /> 備註：需要兒童座椅
+                            </div>
 
-              <!-- Modal footer -->
-              <div class="modal-footer">
-                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
+                            <!-- Modal footer -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
                   返回
                 </button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <!-- 評價對話盒 -->
-        <div class="modal fade" id="rankModal">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <!-- Modal Header -->
-              <div class="modal-header">
-                <div class="modal-title">本次體驗如何?</div>
-                <button type="button" class="close" data-dismiss="modal"></button>
-              </div>
-
-              <!-- Modal body -->
-
-              <div class="rank_modal_body">
-                <div class="rank_modal_title">給予星數：</div>
-                <div class="ratings">
-                  <div class="empty_star">★★★★★</div>
-                  <div class="full_star">★★★★★</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
-              </div>
 
-              <!-- Modal footer -->
-              <div class="modal-footer">
-                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
+                <!-- 評價對話盒 -->
+                <div class="modal fade" id="rankModal">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <div class="modal-title">本次體驗如何?</div>
+                                <button type="button" class="close" data-dismiss="modal"></button>
+                            </div>
+
+                            <!-- Modal body -->
+
+                            <div class="rank_modal_body">
+                                <div class="rank_modal_title">給予星數：</div>
+                                <div class="ratings">
+                                    <div class="empty_star">★★★★★</div>
+                                    <div class="full_star">★★★★★</div>
+                                </div>
+
+                            </div>
+
+                            <!-- Modal footer -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-lg btn-secondary" data-dismiss="modal">
                   返回
                 </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </tbody>
-    </table>
-  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </tbody>
+        </table>
+    </div>
 
     <!-- 頁尾 start -->
 
@@ -222,12 +214,12 @@
 
     <!-- 頁尾 over -->
 
-  <script>
-    $(document).ready(function() {
-        $(".header_page").load("header.html");
-        $(".footer_page").load("footer.html");
-    });
-</script>
+    <script>
+        $(document).ready(function() {
+            $(".header_page").load("header.html");
+            $(".footer_page").load("footer.html");
+        });
+    </script>
 </body>
 
 </html>
